[gd_scene load_steps=7 format=3 uid="uid://b6vfrkaxqqn1t"]

[ext_resource type="Script" path="res://scenes/level/game_ui.gd" id="1_py7ry"]
[ext_resource type="FontFile" uid="uid://dogrj61isaepv" path="res://assets/fonts/Minimal5x5Monospaced.ttf" id="2_mjp4j"]

[sub_resource type="LabelSettings" id="LabelSettings_3j4ec"]
font = ExtResource("2_mjp4j")
font_size = 30
font_color = Color(0.87, 0.0696, 0.0696, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nqiac"]
font = ExtResource("2_mjp4j")
font_size = 30
font_color = Color(0.0696, 0.87, 0.08294, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kv12s"]
font = ExtResource("2_mjp4j")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_3wesc"]
font = ExtResource("2_mjp4j")
font_size = 30
font_color = Color(0.87, 0.0696, 0.0696, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_py7ry")

[node name="RedLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 330.5
offset_top = -281.0
offset_right = 551.5
offset_bottom = -209.0
grow_horizontal = 2
grow_vertical = 2
text = "100 points"
label_settings = SubResource("LabelSettings_3j4ec")
horizontal_alignment = 2

[node name="GreenLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 330.5
offset_top = -281.0
offset_right = 551.5
offset_bottom = -209.0
grow_horizontal = 2
grow_vertical = 2
text = "100 points"
label_settings = SubResource("LabelSettings_nqiac")
horizontal_alignment = 2

[node name="Player0" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -65.0
offset_right = 177.0
offset_bottom = 7.0
grow_vertical = 0
text = "Player 1"
label_settings = SubResource("LabelSettings_kv12s")
horizontal_alignment = 1

[node name="Player0 Ready" type="Label" parent="Player0"]
layout_mode = 0
offset_top = 35.0
offset_right = 140.0
offset_bottom = 107.0
text = "100 points"
label_settings = SubResource("LabelSettings_3wesc")

[node name="Player1" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -65.0
offset_right = -11.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Player 2"
label_settings = SubResource("LabelSettings_kv12s")
horizontal_alignment = 1

[node name="Player1 Ready" type="Label" parent="Player1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = 11.5
offset_right = 65.0
offset_bottom = 83.5
grow_horizontal = 2
grow_vertical = 2
text = "100 points"
label_settings = SubResource("LabelSettings_3wesc")
horizontal_alignment = 2

[node name="Player2" type="Label" parent="."]
offset_left = 11.0
offset_top = 11.0
offset_right = 180.0
offset_bottom = 83.0
text = "Player 3"
label_settings = SubResource("LabelSettings_kv12s")
horizontal_alignment = 1

[node name="Player2 Ready" type="Label" parent="Player2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_right = 136.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
text = "100 points"
label_settings = SubResource("LabelSettings_3wesc")

[node name="Player3" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -179.0
offset_top = 9.0
offset_right = -10.0
offset_bottom = 81.0
grow_horizontal = 0
text = "Player 4"
label_settings = SubResource("LabelSettings_kv12s")
horizontal_alignment = 1

[node name="Player3 Ready" type="Label" parent="Player3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -2.0
offset_right = 59.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
text = "100 points"
label_settings = SubResource("LabelSettings_3wesc")
horizontal_alignment = 2
